GoalTracker/force-app/main/default/objects/Event_Calendar__c/Event_Calendar__c.object-meta.xml
<CustomObject>
    <description>A collection of event pages that can be used for display on the web, generation of calendars, etc.</description>
    <label>Event Calendar</label>
    <nameField>
        <label>Event Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>