GoalTracker/force-app/main/default/objects/Event_Calendar__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this calendar is active and may be selected for new events.</description>
    <inlineHelpText>If checked, this calendar is active and may be selected for new events.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>