GoalTracker/force-app/main/default/objects/Event_Calendar__c/fields/Calendar_Group__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Group__c</fullName>
    <label>Calendar Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sports Club</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>