GoalTracker/force-app/main/default/objects/Event_Calendar__c/fields/Calendar_Key__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is the unique part of the URL that will be used to query this calendar.</description>
    <inlineHelpText>This is the unique part of the URL that will be used to query this calendar.</inlineHelpText>
    <label>Calendar Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>