GoalTracker/force-app/main/default/objects/Event_Calendar__c/fields/Calendar_URL__c.field-meta.xml
<CustomField>
    <fullName>Calendar_URL__c</fullName>
    <description>The link to the calendar page. This is automatically set.</description>
    <inlineHelpText>The link to the calendar page. This is automatically set.</inlineHelpText>
    <label>Calendar URL</label>
    <type>Url</type>
</CustomField>