GoalTracker/force-app/main/default/objects/Event_Calendar__c/fields/CSS_URL_External__c.field-meta.xml
<CustomField>
    <fullName>CSS_URL_External__c</fullName>
    <description>The URL to the style sheet for this calendar, for the external calendar view.</description>
    <inlineHelpText>The URL to the style sheet for this calendar.</inlineHelpText>
    <label>CSS URL (External)</label>
    <type>Url</type>
</CustomField>