GoalTracker/force-app/main/default/objects/Event_Calendar__c/fields/Stylesheet_External__c.field-meta.xml
<CustomField>
    <fullName>Stylesheet_External__c</fullName>
    <description>User-overrideable stylesheet attribute which gets displayed on the external calendar page.</description>
    <inlineHelpText>User-overrideable stylesheet attribute which gets displayed on the external calendar page.</inlineHelpText>
    <label>Stylesheet (External)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>