GoalTracker/force-app/main/default/objects/Event_Calendar__c/fields/Views__c.field-meta.xml
<CustomField>
    <fullName>Views__c</fullName>
    <description>Total number of calendar views.</description>
    <inlineHelpText>Total number of calendar views.</inlineHelpText>
    <label>Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>