GoalTracker/force-app/main/default/objects/Event_Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Calendar_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>